# sentinel

./: Makefile  README.md  pyproject.toml
sentinel/: autotrain.ipynb  scratch_pad.ipynb
sentinel/data/: README.md  synthetic.json
