[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = ""
authors = ["Kyle McLester <kyle.mclester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vllm = "^0.5.2"
scikit-learn = "^1.5.1"
openai = "^1.36.0"
jsonschema = "^4.23.0"
sentence-transformers = "^3.0.1"
seaborn = "^0.13.2"
umap-learn = "^0.5.6"
plotly = "^5.22.0"
xgboost = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
